--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>book-verse-display</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Namrata Agarwal</title>
+    <meta name="description" content="Namrata Agarwal Website" />
+    <meta name="author" content="Namrata Agarwal" />
 
-    <meta property="og:title" content="book-verse-display" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="namrata-agarwal" />
+    <meta property="og:description" content="Namrata Agarwal website" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
