--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Namrata Agarwal</title>
     <meta name="description" content="Namrata Agarwal Website" />
     <meta name="author" content="Namrata Agarwal" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
     <meta property="og:title" content="namrata-agarwal" />
     <meta property="og:description" content="Namrata Agarwal website" />
